X11: Use XC_hand2 instead of XC_hand1

This CL fixes a regression introduced in [1], where one instance of
XC_hand2 was accidentally changed to XC_hand1.  This made the cursor
right-pointing instead of left-pointing [2].

[1] https://codereview.chromium.org/2504743002/
[2] https://tronche.com/gui/x/xlib/appendix/b/

BUG=703982
R=derat@chromium.org

Review-Url: https://codereview.chromium.org/2771733002
Cr-Commit-Position: refs/heads/master@{#458963}

Former-commit-id: f5067d43c3ea45f96b7716c1d4f42ef27d982e81